[package]
name = "olm-rs"
version = "0.3.0"
authors = ["Johannes Hayeß <jhaye@mailbox.org>"]

description = "A Rust wrapper for libolm."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.gnome.org/jhaye/olm-rs"
edition = "2018"

[dependencies]
olm-sys = "0.1.5"
getrandom = "0.1.14"

[dev-dependencies]
json = "0.12.1"
base64 = "0.11.0"
