[package]
name = "olm-rs"
version = "2.0.0"
authors = ["Johannes Hayeß <jhaye@mailbox.org>"]

description = "A Rust wrapper for libolm."
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.gnome.org/jhaye/olm-rs"
edition = "2018"
keywords = ["crypto", "cryptography", "ECC", "curve25519", "olm", "megolm", "matrix"]

[features]
default = ["deserialization"]
deserialization = ["serde", "serde_json"]

[dependencies]
olm-sys = "1.0"
getrandom = "0.2.0"
zeroize = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
json = "0.12.1"
base64 = "0.11.0"
